# py_hoist

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
nuitka/plugins/standard/: nuitka_hoist_plugin.py  nuitka_slots_plugin.py
py_hoist/: __init__.py  hoist_ast.py  hoist_ast_util.py  hoist_code.py  hoist_transformer.py  multi_items.py  slots_optimizer.py
py_hoist/tests/: run_hoist_kernprof.py  test_attribute_access.py  test_dataclass_slots_access.py  test_single_snippet.py  test_split_by_brackets.py  test_split_expr_token_to_items_root.py
